--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'com.codeborne:selenide:5.13.0'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
+    testImplementation "ch.qos.logback:logback-classic:1.2.3"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
 
 tasks.withType(JavaCompile) {
@@ -25,9 +25,16 @@ test {
 
 tasks.withType(Test) {
     systemProperties = System.properties
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
 
-task simple_tests (type: Test) {
+task apple_tests (type: Test) {
     useJUnitPlatform {
+        includeTags 'apple_tag'
     }
 }
