--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,9 @@ task simple_tests (type: Test) {
     useJUnitPlatform {
     }
 }
+
+task apple_tests (type: Test) {
+    useJUnitPlatform {
+        includeTags 'apple_tag'
+    }
+}
